--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html>
   <script>
-    var Module = {
+    var Imgui = {
       onRuntimeInitialized: function() {
-        console.log('lerp result: ' + Module.lerp(1, 2, 0.5));
+        console.log('Load finished.');
+        Imgui.IMGUI_CHECKVERSION();
       }
     };
-    Module.SliderFloat("float", 0.5, 0.0, 1.0);
   </script>
-  <script src="imgui.js"></script>
+  <script src="imgui_out.js"></script>
 </html>
